{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 384,
  "lineage": "876b712a-5cba-0e2f-da36-ae66c32360a1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:827913617635:internet-gateway/igw-05fa3a34ba102022b",
            "id": "igw-05fa3a34ba102022b",
            "owner_id": "827913617635",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "de-ai-25-loggen-igw"
            },
            "tags_all": {
              "ManageBy": "Terraform",
              "Name": "de-ai-25-loggen-igw",
              "Project": "de-ai-25-loggen",
              "Purpose": "로그 제너레이터"
            },
            "vpc_id": "vpc-0d2ec76c379085590"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "827913617635",
            "id": "igw-05fa3a34ba102022b",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-05fa3a34ba102022b",
            "id": "r-rtb-0305d501fccf71f5c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0305d501fccf71f5c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "827913617635",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0305d501fccf71f5c"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:827913617635:route-table/rtb-0305d501fccf71f5c",
            "id": "rtb-0305d501fccf71f5c",
            "owner_id": "827913617635",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05fa3a34ba102022b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "de-ai-25-loggen-public-rt"
            },
            "tags_all": {
              "ManageBy": "Terraform",
              "Name": "de-ai-25-loggen-public-rt",
              "Project": "de-ai-25-loggen",
              "Purpose": "로그 제너레이터"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d2ec76c379085590"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "827913617635",
            "id": "rtb-0305d501fccf71f5c",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00b58ffb55293e1f2",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0305d501fccf71f5c",
            "subnet_id": "subnet-01b736827b94c5ac4"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "827913617635",
            "id": "rtbassoc-00b58ffb55293e1f2",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f376cfc6fd1d3b52",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0305d501fccf71f5c",
            "subnet_id": "subnet-06ac31febf1a34ffe"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "827913617635",
            "id": "rtbassoc-0f376cfc6fd1d3b52",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "fargate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:827913617635:security-group/sg-075d20de27aff6fd3",
            "description": "only fargate",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-075d20de27aff6fd3",
            "ingress": [],
            "name": "de-ai-25-loggen-fargate-sg",
            "name_prefix": "",
            "owner_id": "827913617635",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "de-ai-25-loggen-fargate-sg"
            },
            "tags_all": {
              "ManageBy": "Terraform",
              "Name": "de-ai-25-loggen-fargate-sg",
              "Project": "de-ai-25-loggen",
              "Purpose": "로그 제너레이터"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d2ec76c379085590"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "827913617635",
            "id": "sg-075d20de27aff6fd3",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:827913617635:subnet/subnet-01b736827b94c5ac4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.20.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01b736827b94c5ac4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "827913617635",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "de-ai-25-loggen-public-1",
              "Type": "loggen-public"
            },
            "tags_all": {
              "ManageBy": "Terraform",
              "Name": "de-ai-25-loggen-public-1",
              "Project": "de-ai-25-loggen",
              "Purpose": "로그 제너레이터",
              "Type": "loggen-public"
            },
            "vpc_id": "vpc-0d2ec76c379085590"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "827913617635",
            "id": "subnet-01b736827b94c5ac4",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:827913617635:subnet/subnet-06ac31febf1a34ffe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.20.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06ac31febf1a34ffe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "827913617635",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "de-ai-25-loggen-public-2",
              "Type": "loggen-public"
            },
            "tags_all": {
              "ManageBy": "Terraform",
              "Name": "de-ai-25-loggen-public-2",
              "Project": "de-ai-25-loggen",
              "Purpose": "로그 제너레이터",
              "Type": "loggen-public"
            },
            "vpc_id": "vpc-0d2ec76c379085590"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "827913617635",
            "id": "subnet-06ac31febf1a34ffe",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:827913617635:vpc/vpc-0d2ec76c379085590",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-072bf2fad97f10c31",
            "default_route_table_id": "rtb-003cebe982477c427",
            "default_security_group_id": "sg-06a6a6a825c9ae0e7",
            "dhcp_options_id": "dopt-01ecc933ab1a152f7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d2ec76c379085590",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-003cebe982477c427",
            "owner_id": "827913617635",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "de-ai-25-loggen-vpc"
            },
            "tags_all": {
              "ManageBy": "Terraform",
              "Name": "de-ai-25-loggen-vpc",
              "Project": "de-ai-25-loggen",
              "Purpose": "로그 제너레이터"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "827913617635",
            "id": "vpc-0d2ec76c379085590",
            "region": "ap-northeast-2"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:827913617635:security-group-rule/sgr-0068954b3794e6e8d",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0068954b3794e6e8d",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-2",
            "security_group_id": "sg-075d20de27aff6fd3",
            "security_group_rule_id": "sgr-0068954b3794e6e8d",
            "tags": null,
            "tags_all": {
              "ManageBy": "Terraform",
              "Project": "de-ai-25-loggen",
              "Purpose": "로그 제너레이터"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "827913617635",
            "id": "sgr-0068954b3794e6e8d",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_security_group.fargate",
            "aws_vpc.this"
          ]
        }
      ]
    }
  ]
}